# sd_kaggle

./: .gitignore  README.md  REFACTORING_SUMMARY.md  TODO.md  check_data.py  how_to_make_submission.txt  pyproject.toml  requirements.txt  train.oog  train.py
configs/: default.yaml
models/: feature_scaler.pkl
notebooks/: 01_eda.ipynb  baseline.ipynb  create_submission.ipynb  deepseek_python_20251011_c3adbf.ipynb  eda_commodity_prediction.ipynb  fixed_notebook.ipynb  notebook51cbcf5977.ipynb  notebook_w_optuna.ipynb  upgraded_kaggle_notebook.ipynb
outputs/: training_results.json
presentation/: presentation.md
results/: hyperparams_results.json
scripts/: check_data.py  create_proper_features.py  create_submission.py  debug_split.py  optimize.py  preprocess.py  search_optuna_parameters.py  train.py  visualize_optuna.py
scripts/debug/: check_samples.py  view_data.py
src/data/: dataset.py
src/features/: technical_indicators.py
src/models/: cnn_attention.py  dlinear.py  ft_transformer.py  lstm_attention.py  nhits.py  patchtst.py  registry.py  tabnet.py  timesnet.py
src/training/: losses.py  trainer.py
